Added answer for Ex. 3

--- a/lab-01-hello-r.html
+++ b/lab-01-hello-r.html
@@ -390,8 +390,7 @@ ggplot(data = dino_data, mapping = aes(x = x, y = y)) +
 ##         r
 ##     &lt;dbl&gt;
 ## 1 -0.0645</code></pre>
-<p>Once you’ve cleaned up the text, add your own explanation or
-observations here!</p>
+<p>There is no linear relationship between x and y.</p>
 </div>
 <div id="exercise-3" class="section level3">
 <h3>Exercise 3</h3>
